website/static/schedule.css
* {
    font-family: "Bodoni Moda", serif;
    font-weight: 300;
}

body h5 {
    font-size: 1.2rem;
}

.container {
    min-width: 950px;
}

.position-relative {
    position: relative;
}

.notification-dot {
    position: absolute;
    top: 0;
    right: 0;
    width: 8px;
    height: 8px;
    background-color: red;
    border-radius: 50%;
    border: 1px solid white; /* Optional: Adds a white border to the dot */
    display: none; /* Initially hidden */
}

.notification-dot.active {
    display: block; /* Visible only when the list has items */
}

.nav-link {
    position: relative;
}

.dot-icon {
    position: absolute;
    bottom: -10px;
    left: 50%;
    transform: translateX(-50%);
}

.schedule-grid {
    display: grid;
    grid-template-columns: 120px repeat(11, 1fr);
    width: 100%;
    overflow-x: auto; 
    overflow-y: hidden;
}

.insight-text {
    font-size: 0.95rem;
}

.time-label,
.day-label {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 15px 10px;
    background-color: #f4f4f4;
    font-weight: bold;
    font-size: 0.75rem;
    border: 1px solid #bbb;
    text-transform: uppercase;
}

.cell {
    background-color: white;
    height: 80px;
    border: 1px solid #bbb;
    text-align: center;
    vertical-align: middle;
    font-size: 0.65rem;
    padding: 2px;
    transition: background-color 0.2s ease, color 0.2s ease;
    box-sizing: border-box;
}

.cell:hover {
    background-color: #f0f0f0;
    color: #333;
}


/* Responsive Layout */
@media (max-width: 1200px) {
    body h5 {
        font-size: 1rem;
    }
    .small-font {
        font-size: 0.7rem !important;
    }
    .insight-text {
        font-size: 0.85rem;
    }
}

@media (max-width: 950px) {
    aside.col-md-2 {
        display: none !important; 
    }

    main.col-md-10 {
        width: 100% !important;
    }
}

@media (max-width: 768px) {
    .schedule-grid {
        grid-template-columns: 80px repeat(11, 1fr);
    }

    .time-label,
    .day-label {
        font-size: 0.5rem;
        padding: 10px 5px;
    }

    .cell {
        height: 60px;
        font-size: 0.5rem; 
    }

    .shift-cell {
        font-size: 0.5rem;
    }
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 300px;
    border-radius: 8px;
    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
}

.close {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.small-font {
    font-size: 0.85rem;
}

.bg-brown {
    background-color: #6F4E37;
}

